41.traefik/cafe-ingress.yml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: cafe-traefik-ingress
  # namespace: ingress-nginx
  # annotations:
  #   kubernetes.io/ingress.class: "traefik"
spec:
  rules:
  - host: cafe.example.com
    http:
      paths:
      - backend:
          serviceName: tea-svc
          servicePort: 80
        path: /tea
      - backend:
          serviceName: coffee-svc
          servicePort: 80
        path: /coffee
